@@ -2,9 +2,11 @@ Nutch Change Log
 
 Release 1.4 - Current development
 
+* NUTCH-1109 Add Sonar targets to Ant build.xml (lewismc) 
+
 * NUTCH-1152 Upgrade SolrJ to version 3.4.0 (ab)
 
-* NUTCH-1136 Ant pmd target is broken
+* NUTCH-1136 Ant pmd target is broken (lewismc)
 
 * NUTCH-1058 Upgrade Solr schema to version 1.4 (markus)
 
